# microservice

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_10_31_2011-46c7de1c0dd1_test_table.py
chart/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.yaml  values.yaml.example
chart/templates/: _helpers.tpl  api-deployment.yaml  api-ingress.yaml  api-route.yaml  api-service.yaml  cluster-secret-store.yaml  configmap.yaml  job-migrate-database.yaml  secret-store.yaml  secret.yaml
gitlab-ci/: build.yaml  lint.yaml
infra/: config.yaml  config.yaml.example  external-secrets.sh  login.sh
infra/chart/: Chart.yaml
infra/chart/templates/: cluster-issuer.yaml  secret-store.yaml
infra/terraform/: .gitignore  cert-manager.tf  config.tf  external-secrets.tf  google.tf  grafana-monitoring.tf  ingress-nginx-controller.tf  kubernetes.tf  namespaces.tf  providers.tf  terraform.tfvars.example  variables.tf
scripts/: run-api-dev.sh  run-api-prod.sh
src/: app.py  metrics.py  prometheus_middleware.py
src/api/: deps.py  health.py  metrics.py  probe.py  response.py  router.py  schema.py
src/api/v1/: router.py  schemas.py
src/db/: alembic.py  connection.py  engine.py
src/db/tables/: test.py
src/settings/: base.py
src/utils/: exceptions.py  log.py  sentry.py
terraform/: .gitignore  external-secrets.tf  grafana-monitoring.tf  kubernetes.tf  providers.tf  secrets.tf  terraform.tfvars.example  terragrunt.hcl.example  variables.tf
terraform/app/common/: bearer-token.tf  database.tf  google.tf  kubernetes.tf  namespace.tf  providers.tf  variables.tf
terraform/app/prod/: terragrunt.hcl.example
terraform/app/stage/: terragrunt.hcl.example
terraform/env/: bearer-token.tf  google.tf  kubernetes.tf
terraform/env/common/: database.tf
terraform/env/prod/: terragrunt.hcl.example
terraform/env/stage/: terragrunt.hcl.example
terraform/platform/: cert-manager.tf  dns.tf  docker.tf  gateway.tf  gitlab-runner-values.yaml  gitlab-runner.tf  gitlab.tf  grafana-monitoring-values.yaml  grafana-monitoring.tf  ingress-nginx-controller.tf  kubernetes.tf  main.tf  modules.tf  secret-store.tf  variables.tf
terraform/platform/helm_releases/: releases.tf
tests/: conftest.py  engine.py
tests/integration/api/: conftest.py  test_authentication.py  test_metrics.py
tests/integration/db/: test_connection.py
