[tool.poetry]
name = "microservice-template"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
alembic = "^1.15.2"
alembic-utils = "^0.8.8"
sqlalchemy = {extras=["asyncio"], version = "^2.0.40"}
asyncpg = "^0.30.0"  # remove db driver you won't use
aiomysql = "^0.2.0"
cryptography = "^46.0.3"
uvicorn = "^0.34.2"
gunicorn = "^23.0.0"
typer = "^0.15.4"
orjson = "^3.10.18"
prometheus-client = "^0.22.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.13.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
httpx = "^0.28.1"
freezegun = "^1.2.2"
pytest = "^8.3.5"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.26.0"
python-json-logger = "^3.3.0"
pytest-httpx = "^0.35.0"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "B", "N", "PL", "I", "ASYNC", "C4", "G", "PIE", "T20", "PYI", "Q", "SIM", "ARG", "PERF", "F401"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*" = ["PLR2004"]  # magic-value-comparison
"tests/*" = [
    "E501", # line-too-long
    "E712", # true-false-comparison
    "F403", # undefined-local-with-import-star
    "F841", # unused-variable
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "ARG001", # unused-function-argument
    "SIM105"    # suppressible-exception
]
"alembic/*" = ["E402", "E501"]  # module-import-not-at-top-of-file, line-too-long
"*/api/*" = ["B008"]  # function-call-in-default-argument

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true


[tool.mypy]
python_version = "3.13"
warn_redundant_casts = true
warn_unused_ignores = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

#[[tool.mypy.overrides]]
#module = "tests.*"
#ignore_errors = true
